--- a/imprint.html
+++ b/imprint.html
@@ -20,7 +20,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app-check.js"></script>
     <!-- ✅ SECURITY: External CSS ONLY (no inline styles) -->
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/imprint.css">
@@ -42,18 +42,17 @@
             <h2>Angaben gemäß § 5 TMG</h2>
             <div class="info-box">
                 <p>
-                    <strong>[Ihr vollständiger Name / Firmenname]</strong><br>
-                    [Rechtsform, falls Unternehmen - z.B. "Einzelunternehmen" oder "GbR"]<br>
-                    [Straße und Hausnummer]<br>
-                    [PLZ] [Stadt]<br>
-                    Deutschland
+                    <strong>Name:</strong> Nick-Mark Jacklin<br>
+                    <strong>Adresse:</strong> Osnabrücker Landstr. 2-8<br>
+                    <strong>PLZ/Stadt:</strong> 33335 Gütersloh<br>
+                    <strong>Land:</strong> Deutschland
                 </p>
             </div>
 
-            <div class="warning-box">
-                <p><strong>⚠️ WICHTIG:</strong> Dies ist ein Platzhalter-Impressum. Sie müssen hier Ihre eigenen, korrekten Daten eintragen!</p>
+            <div class="info-box">
+                <p><strong>ℹ️ Hinweis:</strong></p>
                 <p>
-                    Ein fehlendes oder unvollständiges Impressum kann <strong>abgemahnt werden</strong> und verstößt gegen das Telemediengesetz (TMG).
+                    Diese Website wird als <strong>nicht-kommerzielles Hobby-Projekt</strong> betrieben.
                 </p>
             </div>
         </section>
@@ -63,47 +62,16 @@
             <h2>Kontakt</h2>
             <div class="contact-info">
                 <p>
-                    <strong>📧 E-Mail:</strong> <a href="mailto:kontakt@no-cap.app">kontakt@no-cap.app</a><br>
-                    <strong>📱 Telefon:</strong> [Ihre Telefonnummer - optional, aber empfohlen]<br>
+                    <strong>📧 E-Mail:</strong> <a href="mailto:Nickjacklin99@web.de">Nickjacklin99@web.de</a><br>
                     <strong>🌐 Website:</strong> <a href="https://no-cap.app">https://no-cap.app</a>
                 </p>
             </div>
 
             <div class="info-box">
-                <p><strong>ℹ️ Hinweis:</strong> Eine Telefonnummer ist für Privatpersonen nicht verpflichtend, aber für Unternehmen empfohlen.</p>
-            </div>
-        </section>
-
-        <!-- Umsatzsteuer-ID (falls vorhanden) -->
-        <section id="umsatzsteuer">
-            <h2>Umsatzsteuer-Identifikationsnummer</h2>
-            <p>
-                Gemäß § 27a Umsatzsteuergesetz:
-            </p>
-            <div class="info-box">
+                <p><strong>ℹ️ Kontakthinweis:</strong></p>
                 <p>
-                    <strong>USt-IdNr.:</strong> [Ihre USt-IdNr., falls vorhanden - z.B. "DE123456789"]
-                </p>
-            </div>
-
-            <div class="warning-box">
-                <p><strong>⚠️ Nur für Unternehmen relevant:</strong></p>
-                <ul>
-                    <li>Falls Sie <strong>keine USt-IdNr.</strong> haben (z.B. Kleinunternehmer nach § 19 UStG oder Privatperson), können Sie diesen Abschnitt entfernen.</li>
-                    <li>Falls Sie <strong>umsatzsteuerpflichtig</strong> sind, müssen Sie Ihre USt-IdNr. angeben.</li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Berufsbezeichnung (falls relevant) -->
-        <section id="berufsbezeichnung">
-            <h2>Berufsbezeichnung (falls zutreffend)</h2>
-            <div class="info-box">
-                <p>
-                    Dieser Abschnitt ist nur relevant für <strong>reglementierte Berufe</strong> (z.B. Rechtsanwälte, Ärzte, Architekten).
-                </p>
-                <p>
-                    Falls Sie kein reglementierter Beruf sind, können Sie diesen Abschnitt entfernen.
+                    Für Anfragen oder Feedback erreichen Sie mich jederzeit per E-Mail.
+                    Ich bemühe mich, alle Anfragen zeitnah zu beantworten.
                 </p>
             </div>
         </section>
@@ -205,7 +173,7 @@
                 Wir behalten uns vor, dieses Impressum bei Bedarf anzupassen, um es rechtlichen Anforderungen oder Änderungen unseres Angebots anzupassen.
             </p>
             <p>
-                <strong>Letzte Aktualisierung:</strong> 25. November 2024
+                <strong>Letzte Aktualisierung:</strong> 8. Januar 2026
             </p>
         </section>
 
