--- a/404.html
+++ b/404.html
@@ -20,8 +20,8 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-    <!-- ✅ SECURITY: External CSS ONLY (no inline styles) -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <!-- ✅ P2 PERFORMANCE: External CSS for CSP compliance -->
+    <link rel="stylesheet" href="/assets/css/404.css">
 </head>
 <body>
     <!-- Background Particles -->
@@ -41,166 +41,20 @@
             <p class="error-message">
                 Die angeforderte Seite existiert nicht oder wurde verschoben.
             </p>
+
+            <!-- ✅ P1 UI/UX: Clear navigation back to safety -->
             <div class="error-actions">
                 <a href="/index.html" class="btn btn-primary btn-large">
                     🏠 Zur Startseite
                 </a>
+                <button class="btn btn-secondary btn-large" id="back-button">
+                    ← Zurück
+                </button>
             </div>
         </div>
     </div>
 
-    <style>
-        /* ✅ TEMPORARY: Inline CSS only for 404 page to ensure it always works */
-        /* This is acceptable for error pages as they need to be self-contained */
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0;
-            padding: 20px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .background-particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            z-index: -1;
-        }
-
-        .particle {
-            position: absolute;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
-            animation: float 6s ease-in-out infinite;
-        }
-
-        .particle:nth-child(1) { width: 80px; height: 80px; left: 10%; animation-delay: 0s; }
-        .particle:nth-child(2) { width: 120px; height: 120px; left: 70%; animation-delay: 1s; }
-        .particle:nth-child(3) { width: 60px; height: 60px; left: 30%; animation-delay: 2s; }
-        .particle:nth-child(4) { width: 100px; height: 100px; left: 80%; animation-delay: 3s; }
-        .particle:nth-child(5) { width: 40px; height: 40px; left: 50%; animation-delay: 4s; }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0px) rotate(0deg); opacity: 0.3; }
-            50% { transform: translateY(-20px) rotate(180deg); opacity: 0.6; }
-        }
-
-        .error-container {
-            max-width: 600px;
-            width: 100%;
-            z-index: 1;
-        }
-
-        .error-content {
-            background: rgba(255, 255, 255, 0.15);
-            backdrop-filter: blur(20px);
-            border-radius: 20px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            padding: 60px 40px;
-            text-align: center;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-        }
-
-        .error-icon {
-            font-size: 6rem;
-            margin-bottom: 20px;
-            animation: bounce 2s ease-in-out infinite;
-        }
-
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-
-        .error-code {
-            font-size: 5rem;
-            font-weight: 800;
-            color: white;
-            margin: 0 0 20px;
-            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-        }
-
-        .error-title {
-            font-size: 2rem;
-            font-weight: 700;
-            color: white;
-            margin: 0 0 20px;
-        }
-
-        .error-message {
-            font-size: 1.1rem;
-            color: rgba(255, 255, 255, 0.9);
-            margin: 0 0 40px;
-            line-height: 1.6;
-        }
-
-        .error-actions {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            flex-wrap: wrap;
-        }
-
-        .btn {
-            padding: 15px 30px;
-            border: none;
-            border-radius: 25px;
-            font-size: 1.1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-            font-family: inherit;
-        }
-
-        .btn-primary {
-            background: linear-gradient(45deg, #4CAF50, #81C784);
-            color: white;
-            box-shadow: 0 5px 15px rgba(76, 175, 80, 0.3);
-        }
-
-        .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(76, 175, 80, 0.4);
-        }
-
-        .btn-large {
-            padding: 18px 40px;
-            font-size: 1.2rem;
-        }
-
-        @media (max-width: 768px) {
-            .error-content {
-                padding: 40px 30px;
-            }
-
-            .error-code {
-                font-size: 4rem;
-            }
-
-            .error-title {
-                font-size: 1.5rem;
-            }
-
-            .error-icon {
-                font-size: 4rem;
-            }
-        }
-
-        @media (prefers-reduced-motion: reduce) {
-            .particle, .error-icon {
-                animation: none;
-            }
-        }
-    </style>
+    <!-- ✅ P0 SECURITY: CSP-compliant external JavaScript -->
+    <script defer src="/assets/js/404.js"></script>
 </body>
 </html>
