Refactor showNotification function to simplify message handling

--- a/gameplay.html
+++ b/gameplay.html
@@ -40,6 +40,16 @@
     <script defer src="/assets/js/firebase-auth.js"></script>
     <script defer src="/assets/js/firebase-service.js"></script>
     <script defer src="/assets/js/gameplay.js"></script>
+
+    <!-- âœ… P0 SECURITY: Firebase Config via Meta Tags (CSP-compliant) -->
+    <meta name="firebase-api-key" content="AIzaSyD7cvUCiYm2rp6UqLZPy7qM8eEa7mBx-r8">
+    <meta name="firebase-auth-domain" content="denkstduwebsite.firebaseapp.com">
+    <meta name="firebase-database-url" content="https://denkstduwebsite-default-rtdb.europe-west1.firebasedatabase.app">
+    <meta name="firebase-project-id" content="denkstduwebsite">
+    <meta name="firebase-storage-bucket" content="denkstduwebsite.appspot.com">
+    <meta name="firebase-messaging-sender-id" content="1068876330726">
+    <meta name="firebase-app-id" content="1:1068876330726:web:bca93e21e1e4ddc73b7c7c">
+    <meta name="firebase-measurement-id" content="G-V4WVVP7FYQ">
 </head>
 <body>
 <!-- ✅ P1 UI/UX: Loading Spinner für Fragen und Submissions -->
