Update script tags to use 'defer' for improved loading performance

--- a/category-selection.html
+++ b/category-selection.html
@@ -8,7 +8,15 @@
     <!-- Security Headers -->
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-
+    <!-- âœ… P0 SECURITY: Firebase Config via Meta Tags (CSP-compliant) -->
+    <meta name="firebase-api-key" content="AIzaSyD7cvUCiYm2rp6UqLZPy7qM8eEa7mBx-r8">
+    <meta name="firebase-auth-domain" content="denkstduwebsite.firebaseapp.com">
+    <meta name="firebase-database-url" content="https://denkstduwebsite-default-rtdb.europe-west1.firebasedatabase.app">
+    <meta name="firebase-project-id" content="denkstduwebsite">
+    <meta name="firebase-storage-bucket" content="denkstduwebsite.appspot.com">
+    <meta name="firebase-messaging-sender-id" content="1068876330726">
+    <meta name="firebase-app-id" content="1:1068876330726:web:bca93e21e1e4ddc73b7c7c">
+    <meta name="firebase-measurement-id" content="G-V4WVVP7FYQ">
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +39,7 @@
     <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js" crossorigin="anonymous"></script>
     <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js" crossorigin="anonymous"></script>
     <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js" crossorigin="anonymous"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-check.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-check-compat.js" crossorigin="anonymous"></script>
     <!-- ✅ SECURITY: Core Scripts in correct dependency order -->
     <script defer src="/assets/js/GameState.js"></script>
     <script defer src="/assets/js/utils.js"></script>
@@ -39,15 +47,7 @@
     <script defer src="/assets/js/firebase-auth.js"></script>
     <script defer src="/assets/js/category-selection.js"></script>
 
-    <!-- âœ… P0 SECURITY: Firebase Config via Meta Tags (CSP-compliant) -->
-    <meta name="firebase-api-key" content="AIzaSyD7cvUCiYm2rp6UqLZPy7qM8eEa7mBx-r8">
-    <meta name="firebase-auth-domain" content="denkstduwebsite.firebaseapp.com">
-    <meta name="firebase-database-url" content="https://denkstduwebsite-default-rtdb.europe-west1.firebasedatabase.app">
-    <meta name="firebase-project-id" content="denkstduwebsite">
-    <meta name="firebase-storage-bucket" content="denkstduwebsite.appspot.com">
-    <meta name="firebase-messaging-sender-id" content="1068876330726">
-    <meta name="firebase-app-id" content="1:1068876330726:web:bca93e21e1e4ddc73b7c7c">
-    <meta name="firebase-measurement-id" content="G-V4WVVP7FYQ">
+
 </head>
 <body>
 <!-- Background Particles -->
