Update Firebase configuration in HTML files for security compliance

--- a/join-game.html
+++ b/join-game.html
@@ -9,15 +9,15 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
 
-    <!-- âœ… P0 SECURITY: Firebase Config via Meta Tags (CSP-compliant) -->
-    <meta name="firebase-api-key" content="AIzaSyD7cvUCiYm2rp6UqLZPy7qM8eEa7mBx-r8">
+    <!-- ✅ P0 SECURITY: Firebase Config via Meta Tags (CSP-compliant) -->
+    <meta name="firebase-api-key" content="AIzaSyC_cu_2X2uFCPcxYetxIUHi2v56F1Mz0Vk">
     <meta name="firebase-auth-domain" content="denkstduwebsite.firebaseapp.com">
     <meta name="firebase-database-url" content="https://denkstduwebsite-default-rtdb.europe-west1.firebasedatabase.app">
     <meta name="firebase-project-id" content="denkstduwebsite">
-    <meta name="firebase-storage-bucket" content="denkstduwebsite.appspot.com">
-    <meta name="firebase-messaging-sender-id" content="1068876330726">
-    <meta name="firebase-app-id" content="1:1068876330726:web:bca93e21e1e4ddc73b7c7c">
-    <meta name="firebase-measurement-id" content="G-V4WVVP7FYQ">
+    <meta name="firebase-storage-bucket" content="denkstduwebsite.firebasestorage.app">
+    <meta name="firebase-messaging-sender-id" content="27029260611">
+    <meta name="firebase-app-id" content="1:27029260611:web:3c7da4db0bf92e8ce247f6">
+    <meta name="firebase-measurement-id" content="G-BNKNW95HK8">
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
